Fix day note labels
there were 2 problems with them
1. label was splitting between 2 lines when overflown to next line.
  - solution: `white-space:nowrap;` - moves the whole element to new line
2. labels were overlapping when pushed to new line
  - solution: add `line-height: 3;` - this defines the height of the line so the elements do not overlap

--- a/dataengine/server/static/css/base.css
+++ b/dataengine/server/static/css/base.css
@@ -110,15 +110,16 @@ article.data .content {
 
 article.data .labels {
     font-size: 0.8em;
-    margin: 10px;
 }
 
 article.data .labels span {
     background-color: #0f2b38;
     box-shadow: 0 1px 3px #0b0f12;
     padding: 10px;
-    margin: 5px;
+    margin: 2px;
     border-radius: 25px;
+    white-space: nowrap;
+    line-height: 3.2;
 }
 
 article.data .footer {
